# static-site-hello-world

./: .gitignore  LICENSE  README.md  index2.html  package-lock.json  package.json  packages.dhall  project  s2.hs  scripts.hs  shell.nix  spago.dhall  tailwind.config.js
callback-server/: README.md  server.js
config/: package.json
scripts/: Main.hs  project.cabal  scripts.cabal
src/: 404.html  GenerateInitialHTML.purs  Main.purs  index.html  live.js
src/element/: Element.js  Element.purs
src/tw/: TW.js  TW.purs
