cabal-version:      3.0
name:               scripts
version:            0.1.0.0
-- synopsis:
-- description:
-- license:         
-- license-file:
author:             Nathaniel May
maintainer:         github@nathanielmay.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable scripts
    import:           warnings
    main-is:          Main.hs
    -- other-modules:    
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , turtle ^>=1.6.2
    hs-source-dirs:   .
    default-language: GHC2021
